# pir-draft

./: .gitignore  README.md  build.sh  dpf.cpp  dpf.h  irredpol_13_1.txt  keys.h  readme.md  run.sh  script.sh  script2.sh  server.cpp  servers.cpp  servers.h
src/: CMakeLists.txt  client.cpp  client.h  dpf.cpp  dpf.h  keys.cpp  keys.h  main.cpp  prng.cpp  prng.h  server.cpp  server.h  server_trusted.cpp  server_trusted.h
src/tests/: main.cpp
src/tests/protocol/: c.cpp  p0.cpp  p1.cpp  p2.cpp
tests/: a.out  meme.cpp
tests/basic_client_server/: README.md  a.out  client  client.cpp  server  server.cpp
